--- a/templates/store/checkout.html
+++ b/templates/store/checkout.html
@@ -32,33 +32,42 @@
                     <form action="#">
                         <div class="row">
                             <div class="col-lg-6 form-group">
-                                <label class="text-small text-uppercase" for="firstName">Ім'я:</label>
+                                <b><label class="text-small text-uppercase" for="firstName">Ім'я:</label></b>
                                 <div>{{ your_account }}</div>
                             </div>
                             <div class="col-lg-6 form-group">
-                                <label class="text-small text-uppercase" for="email">Адреса електронної пошти</label>
+                                <b><label class="text-small text-uppercase" for="email">Адреса електронної
+                                    пошти</label></b>
                                 <div>{{ email }}</div>
                             </div>
                             <div class="col-lg-6 form-group">
-                                <label class="text-small text-uppercase" for="country">Країна</label>
-                                <div>{{ addresses.country }}</div>
+                                <b><label class="text-small text-uppercase" for="country">Країна</label></b>
+                                {% for address in addresses %}
+                                    <div>{{ address.locality }}</div>
+                                {% endfor %}
                             </div>
                             <div class="col-lg-6 form-group">
-                                <label class="text-small text-uppercase" for="city">Місто</label>
-                                <div>{{ addresses.city }}</div>
+                                <b><label class="text-small text-uppercase" for="city">Місто</label></b>
+                                {% for address in addresses %}
+                                    <div>{{ address.city }}</div>
+                                {% endfor %}
                             </div>
                             <div class="col-lg-6 form-group">
-                                <label class="text-small text-uppercase" for="state">Штат/Країна</label>
-                                <div>{{ address.state }}</div>
+                                <b><label class="text-small text-uppercase" for="state">Штат/Країна</label></b>
+                                {% for address in addresses %}
+                                    <div>{{ address.state }}</div>
+                                {% endfor %}
                             </div>
                             <div class="col-lg-6 form-group">
                                 <div class="custom-control custom-checkbox">
-                                    <label class="text-small text-uppercase" for="city">Номер картки</label>
-                                    <div>{{ paying_ways.card_number }}</div>
+                                    <b><label class="text-small text-uppercase" for="city">Номер картки</label></b>
+                                    {% for paying_way in paying_ways %}
+                                        <div>{{ paying_way.card_number }}</div>
+                                    {% endfor %}
                                 </div>
                             </div>
                             <div class="col-lg-12 form-group">
-{#                                <button  class="btn btn-dark" type="submit">Зробити замовлення</button>#}
+                                {#                                <button  class="btn btn-dark" type="submit">Зробити замовлення</button>#}
                                 <a href="{% url 'store:orders' %}" class="btn btn-primary">Зробити замовлення</a>
 
                             </div>
@@ -66,27 +75,27 @@
                     </form>
                 </div>
                 <!-- ORDER SUMMARY-->
-{#                <div class="col-lg-4">#}
-{#                    <div class="card border-0 rounded-0 p-lg-4 bg-light">#}
-{#                        <div class="card-body">#}
-{#                            <h5 class="text-uppercase mb-4">Ваше замовлення</h5>#}
-{#                            <ul class="list-unstyled mb-0">#}
-{#                                <li class="d-flex align-items-center justify-content-between"><strong#}
-{#                                        class="text-uppercase small font-weight-bold">Проміжний#}
-{#                                    підсумок</strong><span class="text-muted small">${{ amount|intcomma }}</span>#}
-{#                                </li>#}
-{#                                <li class="d-flex align-items-center justify-content-between"><strong#}
-{#                                        class="text-uppercase small font-weight-bold">Вартість#}
-{#                                    доставки</strong><span class="text-muted small">+ ${{ shipping_amount }}</span>#}
-{#                                </li>#}
-{#                                <li class="border-bottom my-2"></li>#}
-{#                                <li class="d-flex align-items-center justify-content-between mb-4"><strong class="text-uppercase#}
-{#                    small font-weight-bold">Всього</strong><span>${{ total_amount|intcomma }}</span></li>#}
-{#                                <li>#}
-{#                            </ul>#}
-{#                        </div>#}
-{#                    </div>#}
-{#                </div>#}
+                {#                <div class="col-lg-4">#}
+                {#                    <div class="card border-0 rounded-0 p-lg-4 bg-light">#}
+                {#                        <div class="card-body">#}
+                {#                            <h5 class="text-uppercase mb-4">Ваше замовлення</h5>#}
+                {#                            <ul class="list-unstyled mb-0">#}
+                {#                                <li class="d-flex align-items-center justify-content-between"><strong#}
+                {#                                        class="text-uppercase small font-weight-bold">Проміжний#}
+                {#                                    підсумок</strong><span class="text-muted small">${{ amount|intcomma }}</span>#}
+                {#                                </li>#}
+                {#                                <li class="d-flex align-items-center justify-content-between"><strong#}
+                {#                                        class="text-uppercase small font-weight-bold">Вартість#}
+                {#                                    доставки</strong><span class="text-muted small">+ ${{ shipping_amount }}</span>#}
+                {#                                </li>#}
+                {#                                <li class="border-bottom my-2"></li>#}
+                {#                                <li class="d-flex align-items-center justify-content-between mb-4"><strong class="text-uppercase#}
+                {#                    small font-weight-bold">Всього</strong><span>${{ total_amount|intcomma }}</span></li>#}
+                {#                                <li>#}
+                {#                            </ul>#}
+                {#                        </div>#}
+                {#                    </div>#}
+                {#                </div>#}
             </div>
         </section>
     </div>
