--- a/templates/store/detail.html
+++ b/templates/store/detail.html
@@ -51,14 +51,15 @@
                   
                   <form action="{% url 'store:add-to-cart' %}">
                     <input type="hidden" name="prod_id" value="{{product.id}}" id="product_id">
-                    <button type="submit" class="btn btn-dark btn-lg btn-block h-100 d-flex align-items-center justify-content-center px-0">Додати в кошик</button>
+                    <button type="submit" class="btn btn-dark btn-lg btn-block h-100 d-flex align-items-center
+                    justify-content-center px-0" style="border-radius: 1.25rem;">Додати в кошик</button>
                   </form>
 
                 </div>
 {#                                            Todo add to like#}
-              </div><a class="btn btn-link text-dark p-0 mb-4" href="#"><i class="far fa-heart mr-2"></i>Додати в
-                бажане</a>
-                  <br>
+{#              </div><a class="btn btn-link text-dark p-0 mb-4" href="#"><i class="far fa-heart mr-2"></i>Додати в#}
+{#                бажане</a>#}
+{#                  <br>#}
               <ul class="list-unstyled small d-inline-block">
                 <li class="px-3 py-2 mb-1 bg-white"><strong class="text-uppercase">SKU:</strong><span class="ml-2 text-muted">{{product.sku}}</span></li>
                 <li class="px-3 py-2 mb-1 bg-white text-muted"><strong class="text-uppercase
@@ -146,7 +147,7 @@
 {#                            Todo add to like#}
 {#                          <li class="list-inline-item m-0 p-0"><a class="btn btn-sm btn-outline-dark" href="#"><i class="far fa-heart"></i></a></li>#}
                           <li class="list-inline-item m-0 p-0"><a class="btn btn-sm btn-dark" href="
-{% url 'store:add-to-cart' %}">Додати в кошик</a></li>
+{% url 'store:add-to-cart' %}" style="border-radius: 1.25rem;">Додати в кошик</a></li>
                         </ul>
                       </div>
                     </div>
