--- a/templates/store/index.html
+++ b/templates/store/index.html
@@ -8,6 +8,67 @@
 {% block content %}
     <!-- HERO SECTION-->
     <div class="container">
+
+        <!-- BIKE CAROUSEL SECTION -->
+        <section class="py-5 bg-light">
+            <div class="container">
+                <header>
+                    <h2 class="h5 text-uppercase mb-4">Наші велосипеди</h2>
+                </header>
+                <div class="row">
+                    <div class="col-lg-12">
+                        <div id="bikeCarousel" class="carousel slide" data-ride="carousel">
+                            <ol class="carousel-indicators">
+                                <li data-target="#bikeCarousel" data-slide-to="0" class="active"></li>
+                                <li data-target="#bikeCarousel" data-slide-to="1"></li>
+                                <li data-target="#bikeCarousel" data-slide-to="2"></li>
+                                <li data-target="#bikeCarousel" data-slide-to="3"></li>
+                                <li data-target="#bikeCarousel" data-slide-to="4"></li>
+                            </ol>
+                            <div id="sliderBigImages" class="carousel slide" data-ride="carousel">
+                                <div class="carousel-inner">
+                                    <div class="carousel-item active">
+                                        <a href="{% url 'store:all-categories' %}"><img
+                                                src="{% static "img/carusel1.png" %}" class="d-block w-100"
+                                                alt="Природа"></a>
+                                    </div>
+                                    <div class="carousel-item">
+                                        <a href="{% url 'store:all-categories' %}"><img
+                                                src="{% static "img/carusel2.png" %}" class="d-block w-100"
+                                                alt="Природа"></a>
+                                    </div>
+                                    <div class="carousel-item">
+                                        <a href="{% url 'store:all-categories' %}"><img
+                                                src="{% static "img/carusel5.png" %}"
+                                                href="{% url 'store:all-categories' %}" class="d-block w-100"
+                                                alt="Природа"></a>
+                                    </div>
+                                </div>
+                                <a class="carousel-control-prev" href="#sliderBigImages" role="button"
+                                   data-slide="prev">
+                                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                    <span class="sr-only">Previous</span>
+                                </a>
+                                <a class="carousel-control-next" href="#sliderBigImages" role="button"
+                                   data-slide="next">
+                                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                    <span class="sr-only">Next</span>
+                                </a>
+                            </div>
+                            <a class="carousel-control-prev" href="#bikeCarousel" role="button" data-slide="prev">
+                                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                <span class="sr-only">Previous</span>
+                            </a>
+                            <a class="carousel-control-next" href="#bikeCarousel" role="button" data-slide="next">
+                                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                <span class="sr-only">Next</span>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
         <section class="hero pb-3 bg-cover bg-center d-flex align-items-center"
                  style="background: url({% static 'img/hero-jewlrey-banner.jpg' %})">
             <div class="container py-5">
@@ -20,17 +81,17 @@
                 </div>
             </div>
         </section>
-{#        <h2>Потріть квадратик, щоб дізнатися свою знижку</h2>#}
-{#                        <div class="container_scratch">#}
-{#                            <div class="base">#}
-{#                                <h4>You Won</h4>#}
-{#                                <h3>-10%</h3>#}
-{#                            </div>#}
-{#                            <canvas id="scratch" width="200" height="200"></canvas>#}
-{#                        </div>#}
-{#                        {% block script %}#}
-{#                            <link href="{% static 'js/scrach_card.js' %}" rel="stylesheet" type="text/css">#}
-{#                        {% endblock script%}#}
+        {#        <h2>Потріть квадратик, щоб дізнатися свою знижку</h2>#}
+        {#                        <div class="container_scratch">#}
+        {#                            <div class="base">#}
+        {#                                <h4>You Won</h4>#}
+        {#                                <h3>-10%</h3>#}
+        {#                            </div>#}
+        {#                            <canvas id="scratch" width="200" height="200"></canvas>#}
+        {#                        </div>#}
+        {#                        {% block script %}#}
+        {#                            <link href="{% static 'js/scrach_card.js' %}" rel="stylesheet" type="text/css">#}
+        {#                        {% endblock script%}#}
 
         <!-- CATEGORIES SECTION-->
         <section class="pt-5">
@@ -84,24 +145,26 @@
                                                     "{{ product.product_image.url }}"
                                                  alt="{{ product.title }}">
                                         {% else %}
-                                            <img class="img-fluid w-100" style="max-height: 170px" src="{% static 'img/not_img.png' %}"
+                                            <img class="img-fluid w-100" style="max-height: 170px"
+                                                 src="{% static 'img/not_img.png' %}"
                                                  alt="{{ product.title }}">
                                         {% endif %}
                                     </a>
 
                                     <div class="product-overlay">
                                         <ul class="mb-0 list-inline">
-{#                                            Todo add to like#}
-{#                                            <li class="list-inline-item m-0 p-0"><a class="btn btn-sm btn-outline-dark"#}
-{#                                                                                    href="#"><i#}
-{#                                                    class="far fa-heart"></i></a></li>#}
+                                            {#                                            Todo add to like#}
+                                            {#                                            <li class="list-inline-item m-0 p-0"><a class="btn btn-sm btn-outline-dark"#}
+                                            {#                                                                                    href="#"><i#}
+                                            {#                                                    class="far fa-heart"></i></a></li>#}
                                             <li class="list-inline-item m-0 p-0">
                                                 {% comment %} <a class="btn btn-sm btn-dark" href="{% url 'store:add-to-cart' %}">Add to cart</a> {% endcomment %}
 
                                                 <form action="{% url 'store:add-to-cart' %}">
                                                     <input type="hidden" name="prod_id" value="{{ product.id }}"
                                                            id="product_id">
-                                                    <button type="submit" class="btn btn-sm btn-dark">Додати в кошик
+                                                    <button type="submit" class="btn btn-sm btn-dark"
+                                                            style="border-radius: 1.25rem;">Додати в кошик
                                                     </button>
                                                 </form>
 
