--- a/templates/store/main.html
+++ b/templates/store/main.html
@@ -143,7 +143,7 @@
                             <br><br>
                             <div class="container">
                                 <table class="table table-striped">
-                                    <thead class="thead-dark">
+                                    <thead>
                                     <tr class="text-center">
                                         <th colspan="4">Таблиця, яка допоможе вам вибрати правильний розмір рами!</th>
                                     </tr>
