--- a/static/css/log_in.css
+++ b/static/css/log_in.css
@@ -165,3 +165,8 @@ button{
     justify-content: center;
     align-items: center;
 }
+
+.text-danger {
+    margin-left: 15px;
+    margin-right:15px;
+}
