Try to fix adding css and js

--- a/templates/store/index.html
+++ b/templates/store/index.html
@@ -29,19 +29,19 @@
                                 <div class="carousel-inner">
                                     <div class="carousel-item active">
                                         <a href="{% url 'store:all-categories' %}"><img
-                                                src="{% static "img/carusel1.png" %}" class="d-block w-100"
-                                                alt="Природа"></a>
+                                               class="d-block w-100" src="{% static "img/carusel1.png" %}"
+                                                alt="Шосейний велосипед"></a>
                                     </div>
                                     <div class="carousel-item">
                                         <a href="{% url 'store:all-categories' %}"><img
                                                 src="{% static "img/carusel2.png" %}" class="d-block w-100"
-                                                alt="Природа"></a>
+                                                alt="Городской велосипед"></a>
                                     </div>
                                     <div class="carousel-item">
                                         <a href="{% url 'store:all-categories' %}"><img
                                                 src="{% static "img/carusel5.png" %}"
                                                 href="{% url 'store:all-categories' %}" class="d-block w-100"
-                                                alt="Природа"></a>
+                                                alt="Шосейний велосипед"></a>
                                     </div>
                                 </div>
                                 <a class="carousel-control-prev" href="#sliderBigImages" role="button"
