--- a/templates/base.html
+++ b/templates/base.html
@@ -32,7 +32,9 @@
     <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
     <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
 {#    Todo place for custom css#}
-{% block head %}{% endblock head %}
+{% block head %}
+
+{% endblock head %}
 </head>
 <body>
 <div class="page-holder">
