Try to fix adding css and js

--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -20,7 +20,7 @@
                             {% csrf_token %}
                             <div class="form-box">
                                 <div class="form-value">
-                                    <h2>Ввійти</h2>
+                                    <h2>Увійти</h2>
                                     {% for fm in form %}
                                         <div class="form-group">
                                             {{ fm.label_tag }}
