--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -80,7 +80,7 @@
                             </div>
                         </li>
                     {% else %}
-                        <li class="nav-item"><a class="nav-link" href="{% url 'store:login' %}">Ввійти</a></li>
+                        <li class="nav-item"><a class="nav-link" href="{% url 'store:login' %}">Увійти</a></li>
                         <li class="nav-item"><a class="nav-link" href="{% url 'store:register' %}">Створити акаунт</a>
                         </li>
                     {% endif %}
