--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -24,12 +24,12 @@
                         <a class="nav-link active" href="{% url 'store:home' %}">WellBike</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="{% url 'store:main' %}">Як обрати велосипед?</a>
+                        <a class="nav-link" href="{% url 'store:main' %}">Як обрати велосипед?</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="{% url 'store:home' %}">Головна</a>
                     </li>
-                    <li class="nav-item dropdown active"><a class="nav-link dropdown-toggle" id="pagesDropdown" href="#"
+                    <li class="nav-item dropdown"><a class="nav-link dropdown-toggle" id="pagesDropdown" href="#"
                                                      data-toggle="dropdown" aria-haspopup="true"
                                                      aria-expanded="false">Крамниця</a>
                         <div class="dropdown-menu mt-3" aria-labelledby="pagesDropdown">
