--- a/templates/cookie.html
+++ b/templates/cookie.html
@@ -3,7 +3,7 @@
     <link rel="stylesheet" href="{% static 'css/cookie.css' %}">
 {% endblock head%}
 <div id="cookie-banner" class="alert alert-warning alert-dismissible fade show" role="alert">
-        <p class="mb-0">Мы используем 🍪cookie, чтобы сделать сайт максимально удобным для вас.</p>
+        <p class="mb-0">Ми використовуємо 🍪cookie, щоб зробити сайт максимально зручним для вас.</p>
         <button id="accept-cookie" type="button" class="btn btn-success">Принять</button>
         <button id="reject-cookie" type="button" class="btn btn-danger" data-dismiss="alert" aria-label="Close">
             Отклонить
