--- a/templates/store/detail.html
+++ b/templates/store/detail.html
@@ -15,7 +15,9 @@
                     {% if product.product_image %}
                       <a class="d-block" href="{{product.product_image.url}}" data-lightbox="product" title="{{product.title}}"><img class="img-fluid" src="{{product.product_image.url}}" alt="{{product.title}}"></a>
                       {% else %}
-                      <a class="d-block" href="{% static 'img/product-detail-1.jpg' %}" data-lightbox="product" title="{{product.title}}"><img class="img-fluid" src="{% static 'img/product-detail-1.jpg' %}" alt="{{product.title}}"></a>
+                      <a class="d-block" href="{% static 'img/not_img.png' %}" data-lightbox="product" title=
+                              "{{product.title}}"><img class="img-fluid" src="
+{% static 'img/not_img.png' %}" alt="{{product.title}}"></a>
                     {% endif %}
                   </div>
                 </div>
