--- a/templates/store/contacts.html
+++ b/templates/store/contacts.html
@@ -15,8 +15,8 @@
                 <p>Наші контактні дані:</p>
                 <ul>
                     <li>Адреса: вул. Пушкина, 123, м. Колотушкина</li>
-                    <li>Телефон: (044) 123-45-67</li>
-                    <li>Email: info@velo.com</li>
+                    <li>Телефон: +380 98 493 00 74</li>
+                    <li><p>Email <a href="https://mail.google.com/" target="_blank">michailo.zaichenko@gmail.com</a></p></li>
                 </ul>
             </div>
             <div class="col-md-6">
@@ -32,7 +32,7 @@
                         <div class="form-group">
                             {{ fm.label_tag }}
                             {{ fm }}
-                        <small class="text-danger">{{ fm.errors|striptags }}</small>
+                            <small class="text-danger">{{ fm.errors|striptags }}</small>
                         </div>
                     {% endfor %}
                     <button type="submit" class="btn btn-primary">Надіслати</button>
