--- a/templates/footer.html
+++ b/templates/footer.html
@@ -2,7 +2,7 @@
 {% block head %}
     <link rel="stylesheet" href="{% static 'css/footer.css' %}">
 {% endblock head %}
-<footer class="bg-dark text-white">
+<footer class="bg-dark text-white" style="margin-top: auto">
     <div class="container">
         <div class="row">
             <div class="col-12 col-md-4">
@@ -13,8 +13,8 @@
             <div class="col-12 col-md-4">
                 <h3>Контакти</h3>
                 <p>Адреса: м.Дніпро, вул. Бебра, 123</p>
-                <p>Телефон: +380 44 123 45 67</p>
-                <p>Email <a href="https://mail.google.com/" target="_blank">info@velo-magazin.com</a></p>
+                  <li>Телефон: +380 98 493 00 74</li>
+                <p>Email <a href="https://mail.google.com/" target="_blank">michailo.zaichenko@gmail.com</a></p>
             </div>
             <div class="col-12 col-md-4">
                 <h3>Посилання</h3>
