--- a/templates/store/cart.html
+++ b/templates/store/cart.html
@@ -107,7 +107,7 @@
                             <div class="row align-items-center text-center">
                                 <div class="col-md-6 mb-3 mb-md-0 text-md-left"><a
                                         class="btn btn-link p-0 text-dark btn-sm"
-                                        href="{% url 'store:home' %}"><i class="fas
+                                        href="{% url 'store:all-categories' %}"><i class="fas
                                                                      fa-long-arrow-alt-left mr-2">
                                 </i>Продовжити подорож магазином</a></div>
                                 {#                                <div class="col-md-6 text-md-right">#}
