--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -21,7 +21,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item">
-                        <a class="nav-link active" href="{% url 'store:home' %}">WellBike</a>
+                        <a class="nav-link active" href="{% url 'store:home' %}"><span class="custom-text">WellBike</span></a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="{% url 'store:main' %}">Як обрати велосипед?</a>
