--- a/templates/store/contacts.html
+++ b/templates/store/contacts.html
@@ -16,7 +16,7 @@
                 <ul>
                     <li>Адреса: вул. Пушкина, 123, м. Колотушкина</li>
                     <li>Телефон: +380 98 493 00 74</li>
-                    <li><p>Email <a href="https://mail.google.com/" target="_blank">michailo.zaichenko@gmail.com</a></p></li>
+                    <li>Email <a href="https://mail.google.com/" target="_blank">michailo.zaichenko@gmail.com</a></li>
                 </ul>
             </div>
             <div class="col-md-6">
