--- a/templates/store/main.html
+++ b/templates/store/main.html
@@ -8,10 +8,10 @@
         <div class="container">
             <h1 itemprop="headline">Як обрати велосипед?</h1>
             <div class="row">
-{#                Todo If you need to add ads on the sides of the site#}
-{#                <div class="col-md-2">#}
-{#                    <img src="{% static 'img/banner.jpg' %}" class="img-fluid" alt="Left Image">#}
-{#                </div>#}
+                {#                Todo If you need to add ads on the sides of the site#}
+                {#                <div class="col-md-2">#}
+                {#                    <img src="{% static 'img/banner.jpg' %}" class="img-fluid" alt="Left Image">#}
+                {#                </div>#}
                 <div class="col-md-8">
                     <div itemprop="text">
                         <p class="p-light-grey-text">Життя сучасної людини складно уявити без спорту та
@@ -30,7 +30,7 @@
                         <p class=“p-main-header”>Перше питання. Ваш стиль катання.</p>
                         <p class=“p-light-grey-text”>Першим і найважливішим є середовище проживання<br>вашого залізного
                             коня, тобто де ви будете їздити на ньому?</p>
-                        <h2>1 Гірські велосипеди</h2>
+                         <h2><a href="{% url 'store:all-categories' %}" class="text-dark">1 Гірські велосипеди</a></h2>
                         <p>Якщо ж ви хочете один байк на всі випадки життя, то ваш шлях лежить у найбільш численну
                             категорію гірських велосипедів. Незважаючи на назву, ці байки хороші не тільки у горах.
                             Завдяки широким шинам (як правило, від 2”) на цьому велосипеді комфортно їздити як по
@@ -54,7 +54,7 @@
                             артефакти старовини. Наступним розміром колес є 27.5”. Рекомендуємо ці колеса тим, чий зріст
                             не перевищує позначки в 175 см. Для всіх же інших (від 175 і вище) – найнери – велосипеди з
                             колесами 29”.</p>
-                        <h2>2 Двопiдвiски</h2>
+                        <h2><a href="{% url 'store:all-categories' %}" class="text-dark">2 Двопiдвiски</a></h2>
                         <p>Ще одним диференційованим ознакою горних велосипедів є амортизація: горнi байки бувають
                             хардтейлами (тiльки амортизацiйна вилка) та двопiдвiсками (окрiм вилки є ще й задний
                             амортизатор).</p>
@@ -72,7 +72,7 @@
                                 відмінне зчеплення з трасою. Саме завдяки їй двопiдвiски почувають себе впевнено навіть
                                 там, де немає дороги, а є лише напрямок. При цьому хардтейли легкі в ходу та ефективніше
                                 передають енергію педалювання у швидкість.</p>
-                            <h2>3 Міські та туристичні велосипеди</h2>
+                            <h2><a href="{% url 'store:all-categories' %}" class="text-dark">3 Міські та туристичні велосипеди</a></h2>
                             <p>Якщо ж велосипед потрібен для повсякденних побутових потреб (поїздка на роботу, за
                                 продуктами і пр.), то варто обирати міський велосипед на дорожних покришках (ширина від
                                 1.1” до 1.75” і діаметром 28”), з багажником та/або кошиком, крилами і пiдставкою. Або з
@@ -84,7 +84,7 @@
 
                             </div>
                             </p>
-                            <h2>4 Електровелосипеди</h2>
+                            <h2><a href="{% url 'store:all-categories' %}" class="text-dark">4 Електровелосипеди</a></h2>
                             <p>Найновішою тенденцією велоіндустрії стали електровелосипеди. Це новий виток еволюції
                                 велосипеда, яка дозволяє проїхати райдеру далі, а тренування зробити ефективнішими.
                                 Асистуючі електромотори, які не крутять замість вас, а лише допомагають за однiєю з
@@ -100,7 +100,7 @@
                                 Звичайно, у бюджетному сегменті тільки такі й представлені, однак усі брендові
                                 велосипеди – це технологічно досконалі байки, які здатні зробити спортсмена сильнiшим, а
                                 при поспiшцi на роботу - встигнути і не спiтнiти.</p>
-                            <h2>5 Шосейнi велосипеди</h2>
+                            <h2><a href="{% url 'store:all-categories' %}" class="text-dark">5 Шосейнi велосипеди</a></h2>
                             <p>Якщо ви хочете швидкостii вам важлива постiйна i рiвномiрна кардionагрузка, то тут краще
                                 шосейника вам нiчого не пiдiйде.</p>
                             <p><img src="https://images.prom.ua/3347772624_shosejnij-velosiped-crosser.jpg"
@@ -110,7 +110,7 @@
                                 гірняку, а
                                 будь-який гірняк не порівняється з шосейником на асфальті.
                             </section>
-                            <h2>6 Кросовi або гiбриднi велосипеди</h2>
+                            <h2><a href="{% url 'store:all-categories' %}" class="text-dark">6 Кросовi або гiбриднi велосипеди</a></h2>
                             <p>Однак, слiд розумiти, що шосейний велосипед не пiдiйде для їзди по грунтовим стежкам.
                                 Вiдсутнiсть амортизацii та вузькi покришки розтрясуть усе бажання їздити. Для таких
                                 цілей є кросові або гібридні велосипеди. Вони мають більшу прохідність, хоч і
@@ -119,7 +119,7 @@
                                 <img src="https://velosvit.net/wp-content/uploads/2019/07/AUTHOR-Profile-II-26-cvet-belo-cherno-sinij-rama-15-1024x768.jpg"
                                      alt="Кроссовые или гибридные велосипеды"/>
                             </p>
-                            <h2>7 Велосипеди BMX, для дерта та триала</h2>
+                            <h2><a href="{% url 'store:all-categories' %}" class="text-dark">7 Велосипеди BMX</a></h2>
                             <p>Любителям пощекотати нерви слід дивитися в бік BMX, стриту, дертових байків. Вони зібрані
                                 на посилених рамах та комплектуючих, на яких просто не захочеться їхати прямо.</p>
                             <p>
@@ -233,10 +233,10 @@
                         </div>
                     </div>
                 </div>
-{#                Todo If you need to add ads on the sides of the site#}
-{#                <div class="col-md-2">#}
-{#                    <img src="{% static 'img/banner.jpg' %}" class="img-fluid" alt="Right Image">#}
-{#                </div>#}
+                {#                Todo If you need to add ads on the sides of the site#}
+                {#                <div class="col-md-2">#}
+                {#                    <img src="{% static 'img/banner.jpg' %}" class="img-fluid" alt="Right Image">#}
+                {#                </div>#}
             </div>
         </div>
     </div>
