--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -50,9 +50,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="{% url 'store:about' %}">Про нас</a>
                     </li>
-                    <li>
-                        <div id="toggle-theme" class="btn btn-primary">🌣</div>
-                    </li>
+{#                    <li>#}
+{#                        <div id="toggle-theme" class="btn btn-primary">🌣</div>#}
+{#                    </li>#}
                 </ul>
                 <ul class="navbar-nav ml-auto">
                     {% if request.user.is_authenticated %}
